- Added new health.js file to include health response. - Removed database health check from server.js as it added no value in the greater Mojaloop project. - Updated dependencies in package.json file to latest.
