# src/server.js
@@ -6,7 +6,6 @@ const Hapi = require('hapi')
 const HapiOpenAPI = require('hapi-openapi')
 const Path = require('path')
 const Good = require('good')
-const Health = require('hapi-alive')
 
 const Config = require('./lib/config.js')
 const Database = require('./data/cachedDatabase.js')
@@ -70,37 +69,12 @@ const initServer = async function (db, config) {
         }, 'stdout']
       }
     }
-  }, {
-
-  // add a health endpoint on Database being available/
-    plugin: Health,
-    options: {
-      path: '/health', //Health route path
-      tags: ['health', 'monitor'],
-      responses: {
-        healthy: {
-          message: 'Quoting service Database connection is healthy!!!'
-        },
-        unhealthy: {
-          statusCode: 500
-        }
-      },
-
-    // If database is not connected , throw an error.
-      healthCheck: async function (server) {
-        if (!(await server.app.database.isConnected())) {
-          throw new Error('Database not connected');
-        }
-        return await true;
-      }
-    }
   }])
 
-  // add a health endpoint on /
   // deal with the api spec content-type not being "application/json" which it actually is. seriously!?
   server.ext('onRequest', function (request, reply) {
     if (request.headers['content-type'] &&
-            request.headers['content-type'].startsWith('application/vnd.interoperability')) {
+      request.headers['content-type'].startsWith('application/vnd.interoperability')) {
       request.headers['x-content-type'] = request.headers['content-type']
       request.headers['content-type'] = 'application/json'
     }
@@ -109,6 +83,7 @@ const initServer = async function (db, config) {
 
   // start the server
   await server.start()
+
   return server
 }
 
@@ -129,10 +104,8 @@ initDb(config.database).then(db => {
   })
 
   server.plugins.openapi.setHost(server.info.host + ':' + server.info.port)
-  server.log(['info'], `Server running`)
-
+  server.log(['info'], `Server running on ${server.info.uri}`)
 }).catch(err => {
   // eslint-disable-next-line no-console
   console.log(`Error initializing server: ${err.stack || util.inspect(err)}`)
 })
-
